src/main/java/xyz/cofe/lang2/parser/lang2Parser.java
/* 
 * The MIT License
 *
 * Copyright 2014 Kamnev Georgiy (nt.gocha@gmail.com).
 *
 * Данная лицензия разрешает, безвозмездно, лицам, получившим копию данного программного 
 * обеспечения и сопутствующей документации (в дальнейшем именуемыми "Программное Обеспечение"), 
 * использовать Программное Обеспечение без ограничений, включая неограниченное право на 
 * использование, копирование, изменение, объединение, публикацию, распространение, сублицензирование 
 * и/или продажу копий Программного Обеспечения, также как и лицам, которым предоставляется 
 * данное Программное Обеспечение, при соблюдении следующих условий:
 *
 * Вышеупомянутый копирайт и данные условия должны быть включены во все копии 
 * или значимые части данного Программного Обеспечения.
 *
 * ДАННОЕ ПРОГРАММНОЕ ОБЕСПЕЧЕНИЕ ПРЕДОСТАВЛЯЕТСЯ «КАК ЕСТЬ», БЕЗ ЛЮБОГО ВИДА ГАРАНТИЙ, 
 * ЯВНО ВЫРАЖЕННЫХ ИЛИ ПОДРАЗУМЕВАЕМЫХ, ВКЛЮЧАЯ, НО НЕ ОГРАНИЧИВАЯСЬ ГАРАНТИЯМИ ТОВАРНОЙ ПРИГОДНОСТИ, 
 * СООТВЕТСТВИЯ ПО ЕГО КОНКРЕТНОМУ НАЗНАЧЕНИЮ И НЕНАРУШЕНИЯ ПРАВ. НИ В КАКОМ СЛУЧАЕ АВТОРЫ 
 * ИЛИ ПРАВООБЛАДАТЕЛИ НЕ НЕСУТ ОТВЕТСТВЕННОСТИ ПО ИСКАМ О ВОЗМЕЩЕНИИ УЩЕРБА, УБЫТКОВ 
 * ИЛИ ДРУГИХ ТРЕБОВАНИЙ ПО ДЕЙСТВУЮЩИМ КОНТРАКТАМ, ДЕЛИКТАМ ИЛИ ИНОМУ, ВОЗНИКШИМ ИЗ, ИМЕЮЩИМ 
 * ПРИЧИНОЙ ИЛИ СВЯЗАННЫМ С ПРОГРАММНЫМ ОБЕСПЕЧЕНИЕМ ИЛИ ИСПОЛЬЗОВАНИЕМ ПРОГРАММНОГО ОБЕСПЕЧЕНИЯ 
 * ИЛИ ИНЫМИ ДЕЙСТВИЯМИ С ПРОГРАММНЫМ ОБЕСПЕЧЕНИЕМ.
 */
package xyz.cofe.lang2.parser;

import xyz.cofe.lang2.vm.Value;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class lang2Parser extends AbstractParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHAR", "COMMENT", "ESC_SEQ", 
		"EXPONENT", "FLOAT", "FUNCTION", "HEX_DIGIT", "ID", "INT", "NOT", "OCTAL_ESC", 
		"STRING", "UNICODE_ESC", "WS", "'!='", "'%'", "'&'", "'('", "')'", "'*'", 
		"'+'", "','", "'-'", "'.'", "'/'", "':'", "';'", "'<'", "'<='", "'<>'", 
		"'='", "'=='", "'>'", "'>='", "'?'", "'['", "']'", "'^'", "'and'", "'break'", 
		"'catch'", "'continue'", "'else'", "'false'", "'for'", "'if'", "'in'", 
		"'null'", "'or'", "'return'", "'throw'", "'true'", "'try'", "'var'", "'while'", 
		"'xor'", "'{'", "'|'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int CHAR=4;
	public static final int COMMENT=5;
	public static final int ESC_SEQ=6;
	public static final int EXPONENT=7;
	public static final int FLOAT=8;
	public static final int FUNCTION=9;
	public static final int HEX_DIGIT=10;
	public static final int ID=11;
	public static final int INT=12;
	public static final int NOT=13;
	public static final int OCTAL_ESC=14;
	public static final int STRING=15;
	public static final int UNICODE_ESC=16;
	public static final int WS=17;

	// delegates
	public AbstractParser[] getDelegates() {
		return new AbstractParser[] {};
	}

	// delegators


	public lang2Parser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public lang2Parser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
		this.state.ruleMemo = new HashMap[82+1];


	}

	@Override public String[] getTokenNames() { return lang2Parser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g"; }


	protected static class expressions_scope {
		java.util.ArrayList<Value> body;
		Boolean _finaled;
		Boolean _e2Exists;
	}
	protected Stack<expressions_scope> expressions_stack = new Stack<expressions_scope>();


	// $ANTLR start "expressions"
	// /home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g:21:1: expressions returns [Value value] : e1= expression ( ( ';' )? e2= expression )* (f= ';' )? ;
	public final Value expressions() throws RecognitionException {
		expressions_stack.push(new expressions_scope());
		Value value = null;

		int expressions_StartIndex = input.index();

		Token f=null;
		ParserRuleReturnScope e1 =null;
		ParserRuleReturnScope e2 =null;


				expressions_stack.peek().body = new java.util.ArrayList<Value>();
				expressions_stack.peek()._finaled = false;
				expressions_stack.peek()._e2Exists = false;
			
		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return value; }

			// /home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g:34:2: (e1= expression ( ( ';' )? e2= expression )* (f= ';' )? )
			// /home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g:35:3: e1= expression ( ( ';' )? e2= expression )* (f= ';' )?
			{
			pushFollow(FOLLOW_expression_in_expressions68);
			e1=expression();
			state._fsp--;
			if (state.failed) return value;
			if ( state.backtracking==0 ) { expressions_stack.peek().body.add((e1!=null?((lang2Parser.expression_return)e1).value:null)); }
			// /home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g:37:2: ( ( ';' )? e2= expression )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==30) ) {
					int LA2_1 = input.LA(2);
					if ( ((LA2_1 >= FLOAT && LA2_1 <= FUNCTION)||(LA2_1 >= ID && LA2_1 <= NOT)||LA2_1==STRING||LA2_1==21||LA2_1==26||LA2_1==39||LA2_1==43||LA2_1==45||(LA2_1 >= 47 && LA2_1 <= 49)||LA2_1==51||(LA2_1 >= 53 && LA2_1 <= 58)||LA2_1==60) ) {
						alt2=1;
					}

				}
				else if ( ((LA2_0 >= FLOAT && LA2_0 <= FUNCTION)||(LA2_0 >= ID && LA2_0 <= NOT)||LA2_0==STRING||LA2_0==21||LA2_0==26||LA2_0==39||LA2_0==43||LA2_0==45||(LA2_0 >= 47 && LA2_0 <= 49)||LA2_0==51||(LA2_0 >= 53 && LA2_0 <= 58)||LA2_0==60) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// /home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g:37:4: ( ';' )? e2= expression
					{
					// /home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g:37:4: ( ';' )?
					int alt1=2;
					int LA1_0 = input.LA(1);
					if ( (LA1_0==30) ) {
						alt1=1;
					}
					switch (alt1) {
						case 1 :
							// /home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g:37:4: ';'
							{
							match(input,30,FOLLOW_30_in_expressions78); if (state.failed) return value;
							}
							break;

					}

					pushFollow(FOLLOW_expression_in_expressions84);
					e2=expression();
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) { expressions_stack.peek().body.add((e2!=null?((lang2Parser.expression_return)e2).value:null)); }
					if ( state.backtracking==0 ) { expressions_stack.peek()._e2Exists = true; }
					}
					break;

				default :
					break loop2;
				}
			}

			// /home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g:42:2: (f= ';' )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==30) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// /home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g:42:4: f= ';'
					{
					f=(Token)match(input,30,FOLLOW_30_in_expressions107); if (state.failed) return value;
					if ( state.backtracking==0 ) { expressions_stack.peek()._finaled = true; }
					}
					break;

			}

			if ( state.backtracking==0 ) { value = factory().Expressions( expressions_stack.peek().body ); }
			if ( state.backtracking==0 ) {
						if( expressions_stack.peek()._finaled ){
							if( expressions_stack.peek()._e2Exists ){
								location(value,(e1!=null?(e1.start):null),f);
							}else{
								location(value,(e1!=null?(e1.start):null),f);
							}
						}else{
							if( expressions_stack.peek()._e2Exists ){
								location(value,(e1!=null?(e1.start):null),(e2!=null?(e2.stop):null));
							}else{
								location(value,(e1!=null?(e1.start):null));
							}
						}
					}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 1, expressions_StartIndex); }

			expressions_stack.pop();
		}
		return value;
	}
	// $ANTLR end "expressions"


	public static class expression_return extends ParserRuleReturnScope {
		public Value value;
	};


	// $ANTLR start "expression"
	// /home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g:62:1: expression returns [Value value] : (vde= varDefine |wce= whileCycle |fce= forCycle |ae= assign |be= block |fe= flow );
	public final lang2Parser.expression_return expression() throws RecognitionException {
		lang2Parser.expression_return retval = new lang2Parser.expression_return();
		retval.start = input.LT(1);
		int expression_StartIndex = input.index();

		ParserRuleReturnScope vde =null;
		ParserRuleReturnScope wce =null;
		ParserRuleReturnScope fce =null;
		ParserRuleReturnScope ae =null;
		ParserRuleReturnScope be =null;
		ParserRuleReturnScope fe =null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }

			// /home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g:63:2: (vde= varDefine |wce= whileCycle |fce= forCycle |ae= assign |be= block |fe= flow )
			int alt4=6;
			switch ( input.LA(1) ) {
			case 57:
				{
				alt4=1;
				}
				break;
			case 58:
				{
				alt4=2;
				}
				break;
			case 48:
				{
				alt4=3;
				}
				break;
			case FLOAT:
			case FUNCTION:
			case ID:
			case INT:
			case NOT:
			case STRING:
			case 21:
			case 26:
			case 39:
			case 47:
			case 51:
			case 55:
				{
				alt4=4;
				}
				break;
			case 60:
				{
				int LA4_5 = input.LA(2);
				if ( (LA4_5==ID) ) {
					int LA4_7 = input.LA(3);
					if ( (LA4_7==29) ) {
						alt4=4;
					}
					else if ( ((LA4_7 >= FLOAT && LA4_7 <= FUNCTION)||(LA4_7 >= ID && LA4_7 <= NOT)||LA4_7==STRING||(LA4_7 >= 18 && LA4_7 <= 21)||(LA4_7 >= 23 && LA4_7 <= 24)||(LA4_7 >= 26 && LA4_7 <= 28)||(LA4_7 >= 30 && LA4_7 <= 39)||(LA4_7 >= 41 && LA4_7 <= 43)||LA4_7==45||(LA4_7 >= 47 && LA4_7 <= 49)||(LA4_7 >= 51 && LA4_7 <= 62)) ) {
						alt4=5;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return retval;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 7, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}
				else if ( ((LA4_5 >= FLOAT && LA4_5 <= FUNCTION)||(LA4_5 >= INT && LA4_5 <= NOT)||LA4_5==STRING||LA4_5==21||LA4_5==26||LA4_5==39||LA4_5==43||LA4_5==45||(LA4_5 >= 47 && LA4_5 <= 49)||LA4_5==51||(LA4_5 >= 53 && LA4_5 <= 58)||LA4_5==60) ) {
					alt4=5;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return retval;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 5, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 43:
			case 45:
			case 49:
			case 53:
			case 54:
			case 56:
				{
				alt4=6;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// /home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g:63:4: vde= varDefine
					{
					pushFollow(FOLLOW_varDefine_in_expression139);
					vde=varDefine();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) { retval.value = (vde!=null?((lang2Parser.varDefine_return)vde).value:null); }
					if ( state.backtracking==0 ) { location(retval.value,(vde!=null?(vde.start):null),(vde!=null?(vde.stop):null)); }
					}
					break;
				case 2 :
					// /home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g:66:4: wce= whileCycle
					{
					pushFollow(FOLLOW_whileCycle_in_expression155);
					wce=whileCycle();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) { retval.value = (wce!=null?((lang2Parser.whileCycle_return)wce).value:null); }
					if ( state.backtracking==0 ) { location(retval.value,(wce!=null?(wce.start):null),(wce!=null?(wce.stop):null)); }
					}
					break;
				case 3 :
					// /home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g:69:4: fce= forCycle
					{
					pushFollow(FOLLOW_forCycle_in_expression171);
					fce=forCycle();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) { retval.value = (fce!=null?((lang2Parser.forCycle_return)fce).value:null); }
					if ( state.backtracking==0 ) { location(retval.value,(fce!=null?(fce.start):null),(fce!=null?(fce.stop):null)); }
					}
					break;
				case 4 :
					// /home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g:72:4: ae= assign
					{
					pushFollow(FOLLOW_assign_in_expression187);
					ae=assign();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) { retval.value = (ae!=null?((lang2Parser.assign_return)ae).value:null); }
					if ( state.backtracking==0 ) { location(retval.value,(ae!=null?(ae.start):null),(ae!=null?(ae.stop):null)); }
					}
					break;
				case 5 :
					// /home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g:75:4: be= block
					{
					pushFollow(FOLLOW_block_in_expression203);
					be=block();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) { retval.value = (be!=null?((lang2Parser.block_return)be).value:null); }
					if ( state.backtracking==0 ) { location(retval.value,(be!=null?(be.start):null),(be!=null?(be.stop):null)); }
					}
					break;
				case 6 :
					// /home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g:78:4: fe= flow
					{
					pushFollow(FOLLOW_flow_in_expression218);
					fe=flow();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) { retval.value = (fe!=null?((lang2Parser.flow_return)fe).value:null); }
					if ( state.backtracking==0 ) { location(retval.value,(fe!=null?(fe.start):null),(fe!=null?(fe.stop):null)); }
					}
					break;

			}
			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 2, expression_StartIndex); }

		}
		return retval;
	}
	// $ANTLR end "expression"


	public static class varDefine_return extends ParserRuleReturnScope {
		public Value value;
	};


	// $ANTLR start "varDefine"
	// /home/user/code/dev/nb74/lang2/src/lang2/parser/lang2.g:86:1: varDefine returns [Value value] : b= 'var' id= ID ( '=' e2= expression )? ;
	public final lang2Parser.varDefine_return varDefine() throws RecognitionException {
		lang2Parser.varDefine_return retval = new lang2Parser.varDefine_return();
		retval.start = input.LT(1);
		int varDefine_StartIndex = input.index();

		Token b=null;
		Token id=null;
		ParserRuleReturnScope e2 =null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
